--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <h1 class="text-3xl font-bold underline">
     Hello world!
   </h1>
-  <form>
+  <form method="POST" action="https://kwesforms.com/api/f/SOpQnE1SMBhObAovDkz8">
     <input type='text' name='name' placeholder='Your name' />
     <input type='submit' value='Submit'/>
   </form>
